k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: securescanner
  labels:
    app.kubernetes.io/name: securescanner
